--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 click = "^8.1.3"
+tomli = "^2.0.1"
+omegaconf = "^2.3.0"
+pillow = "^10.0.0"
 
 [tool.poetry.scripts]
 unibox = 'unibox.cli:cli'
