--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ click = "^8.1.3"
 tomli = "^2.0.1"
 omegaconf = "^2.3.0"
 pillow = "^10.0.0"
+tqdm = "^4.65.0"
 
 [tool.poetry.scripts]
 unibox = 'unibox.cli:cli'
