--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ omegaconf = "^2.3.0"
 pillow = "^10.0.0"
 tqdm = "^4.65.0"
 colorlog = "^6.7.0"
+pandas = "^2.0.3"
+pyarrow = "^12.0.1"
 
 [tool.poetry.scripts]
 unibox = 'unibox.cli:cli'
