--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "unibox"
-version = "0.1.4.1"
+version = "0.1.4.3"
 description = "one toolbox to rule'em all"
 authors = ["yada <trojblue@gmail.com>"]
 license = "GPL-3.0"
@@ -14,8 +14,8 @@ omegaconf = "^2.3.0"
 pillow = "^10.0.0"
 tqdm = "^4.65.0"
 colorlog = "^6.7.0"
-pandas = "^2.0.3"
-pyarrow = "^12.0.1"
+pandas = "^1.1.5" # <2 to be compatible with auto-faiss
+pyarrow = "^6.0.1" # 6-8 to be compatible with auto-faiss
 
 [tool.poetry.scripts]
 unibox = 'unibox.cli:cli'
