--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,9 @@ omegaconf = "^2.3.0"
 pillow = "^10.0.0"
 tqdm = "^4.65.0"
 colorlog = "^6.7.0"
-pandas = "^1.1.5" # <2 to be compatible with auto-faiss
-pyarrow = "^6.0.1" # 6-8 to be compatible with auto-faiss
+pandas = "^2.0.3"
+pyarrow = "^12.0.1"
+
 
 [tool.poetry.scripts]
 unibox = 'unibox.cli:cli'
