--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "unibox"
-version = "0.2.2"
+version = "0.2.3"
 description = "Unibox is a tool that aims to provide a unified interface for various common daily operations"
 authors = ["yada <trojblue@gmail.com>"]
 license = "GPL-3.0"
@@ -15,8 +15,8 @@ omegaconf = "^2.3.0"
 pillow = "^10.0.0"
 tqdm = "^4.65.0"
 colorlog = "^6.7.0"
-pandas = "^2.0.3"
-pyarrow = "^12.0.1"
+pandas = "*"
+pyarrow = "*"
 
 
 [tool.poetry.scripts]
