--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [tool.poetry]
 name = "unibox"
-version = "0.2.11"
+version = "0.2.12"
 description = "Unibox is a tool that aims to provide a unified interface for various common daily operations"
 authors = ["yada <trojblue@gmail.com>"]
-license = "GPL-3.0"
+license = "MIT"
 readme = "README.md"
 repository = "https://github.com/trojblue/unibox"
 
