--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "unibox"
-version = "0.3.4"
+version = "0.3.5"
 description = "Unibox is a tool that aims to provide a unified interface for various common daily operations"
 authors = ["yada <trojblue@gmail.com>"]
 license = "MIT"
@@ -17,6 +17,7 @@ tqdm = "^4.65.0"
 colorlog = "^6.7.0"
 pandas = "*"
 pyarrow = "*"
+boto3 = "^1.28.76"
 
 
 [tool.poetry.scripts]
