--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pandas = "*"
 pyarrow = "*"
 boto3 = "^1.28.76"
 requests = "^2.31.0"
+ipykernel = "^6.22.0" # ipykernel 6.7 has tqdm issues
 
 
 [tool.poetry.scripts]
