--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ boto3 = "^1.28.76"
 requests = "^2.31.0"
 orjson = "^3.9.10"
 
+[tool.poetry.extras]
+full = ["ipython"]
 
 [tool.poetry.scripts]
 unibox = 'unibox.cli:cli'
