--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,11 @@ classifiers = [
     "Topic :: Utilities",
     "Typing :: Typed",
 ]
-dependencies = []
+dependencies = [
+    "boto3>=1.35.91",
+    "orjson>=3.10.13",
+    "pandas>=2.2.3",
+]
 
 [project.urls]
 Homepage = "https://trojblue.github.io/unibox"
