--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,5 +1,5 @@
 github: trojblue
-ko_fi: trojblue
-polar: trojblue
-custom:
-- https://www.paypal.me/trojblue
+# ko_fi: trojblue
+# polar: trojblue
+# custom:
+# - https://www.paypal.me/trojblue
