--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,9 @@ classifiers = [
 dependencies = [
     "boto3>=1.35.91",
     "orjson>=3.10.13",
-    "pandas>=2.2.3",
+    "pandas[parquet]>=2.2.3",
     "pillow>=11.1.0",
+    "tqdm>=4.67.1",
 ]
 
 [project.urls]
