--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ classifiers = [
 ]
 dependencies = [
     "boto3>=1.35.91",
+    "datasets>=3.2.0",
     "orjson>=3.10.13",
     "pandas[parquet]>=2.2.3",
     "pillow>=11.1.0",
