--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ classifiers = [
 ]
 dependencies = [
     "boto3>=1.35.91",
+    "colorama>=0.4.6",
     "colorlog>=6.9.0",
     "datasets>=3.2.0",
     "orjson>=3.10.13",
