--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "orjson>=3.10.13",
     "pandas[parquet]>=2.2.3",
     "pillow>=11.1.0",
+    "tomli-w>=1.2.0",
     "tqdm>=4.67.1",
 ]
 
