--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.10"
 keywords = []
-version="0.8.4"  # Remove local suffix
-# dynamic = ["version"]
+# version="0.8.4"  # Remove local suffix
+dynamic = ["version"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
